# eos-stream

./: Cargo.toml  PKGBUILD  README.md  build.rs  eos-stream.service  eos-uvc.service  mise.toml  setup-pi.sh
src/: main.rs  rust-source.c  uvc_wrapper.h
uvc-gadget/include/: config.h
uvc-gadget/lib/: configfs.c  uvc.c
