[package]
name = "eos-uvc"
version = "0.2.8"
edition = "2021"

[build-dependencies]
bindgen = "0.65"
cc = "1.0"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
console = "0.15.8"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
ctrlc = "3.4"
gphoto2 = "3.2.3"
log = "0.4.21"
usb-gadget = "1.1.1"
nix = { version = "0.29", features = ["ioctl", "event", "mman", "fs"] }
libc = "0.2"
